# i18nexus-tools

./: .gitignore  .npmignore  CHANGELOG.md  PERFORMANCE_LOGGING.md  PERFORMANCE_MONITORING.md  README.ko.md  README.md  RELEASE_v1.7.0.md  package.json  test.md  tsconfig.json
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: i18n-download-direct.yml  i18n-download.yml  npm-publish.yml
docs/: COMMIT_MESSAGE_GUIDE.md  README.md  testing-guidelines.md
docs/advanced/: rsc-hook-selection.md
docs/cli/: i18n-wrapper.md
docs/guides/: configuration.md  nextjs-app-router.md
docs/learning/: 01-basics.md
docs/technical/: removed-external-constants-analysis.md  swc-performance-issue.md
scripts/: clean-legacy.ts  config-loader.ts  default-config.ts  extractor.ts  google-sheets.ts  performance-monitor.ts  rsc-detector.ts  swc-utils.ts  t-wrapper.ts
scripts/common/: default-config.ts
scripts/extractor/: constants.ts  extractor-utils.test.ts  extractor-utils.ts  index.e2e.test.ts  index.ts  key-extractor.test.ts  output-generator.test.ts  output-generator.ts
scripts/t-wrapper/: ast-helpers.test.ts  ast-helpers.ts  ast-transformers.ts  completion-reporter.ts  constants.ts  import-manager.test.ts  (+4 more)
scripts/t-wrapper-rust/: Cargo.toml
scripts/t-wrapper-rust/src/: ast_helpers.rs  ast_transformers.rs  constants.rs  import_manager.rs  lib.rs  main.rs  parser.rs  translation_wrapper.rs
scripts/t-wrapper-rust/tests/: ast_helpers_test.rs  ast_transformers_test.rs  e2e_test.rs  import_manager_test.rs  integration_test.rs  parser_test.rs  translation_wrapper_test.rs
(+2 files in other folders)
