[package]
name = "t-wrapper-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# SWC 고수준 API
swc = "*"
# SWC 의존성 - swc_ecma_parser가 다른 패키지 버전을 결정
swc_ecma_parser = "27.0"
swc_ecma_ast = "18.0"
swc_ecma_visit = "18.0"
swc_common = "17.0"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"

[dev-dependencies]
# 테스트용 의존성은 필요시 추가

